Versi 3 (Mobile Update

--- a/dok.html
+++ b/dok.html
@@ -10,10 +10,13 @@
   <div class="atas">
     <nav>
       <a href="index.html"><img src="assets/logo.png" class="logo" alt="Logo"></a>
-      <ul>
+
+      <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+
+      <ul id="nav-links">
         <li><a href="produk.html">List Produk</a></li>
         <li><a href="panduan.html">Panduan</a></li>
-        <li><a href="dok.html">Dokumentasi</a></li>
+        <li><a href="dok.html" class="active">Dokumentasi</a></li>
         <li>
           <a href="https://wa.me/+6282255304228" target="_blank" class="btn-link">
             <img src="assets/icon.png" alt="WA">Hubungi
@@ -27,5 +30,7 @@
       <p>Kumpulan dokumentasi kegiatan KelDua Petshop.</p>
     </div>
   </div>
+
+  <script src="menu.js"></script>
 </body>
 </html>
