--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Pagenya</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home Pagenya</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="atas">
-        <nav>
-            <a href="index.html"><img src="assets/logo.png" class="logo" alt="Logo"></a>
-            <ul>
-                <li><a href="produk.html">List Produk</a></li>
-                <li><a href="panduan.html">Panduan</a></li>
-                <li><a href="dok.html">Dokumentasi</a></li>
-                <li>
-                    <a href="https://wa.me/+6282255304228" target="_blank" class="btn-link">
-                        <img src="assets/icon.png" alt="WA">Hubungi
-                    </a>
-                </li>
-            </ul>
-        </nav>
+  <div class="atas">
+    <nav>
+      <a href="index.html"><img src="assets/logo.png" class="logo" alt="Logo"></a>
 
-        <div class="isi">
-            <h1>KelDua Petshop</h1>
-            <p>Petshop Pilihan Orang Pintar.</p>
-            <form>
-                <input type="text" placeholder="Request">
-                <button type="submit" class="btn">Submit</button>
-            </form>
-        </div>
+      <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+
+      <ul id="nav-links">
+        <li><a href="produk.html">List Produk</a></li>
+        <li><a href="panduan.html">Panduan</a></li>
+        <li><a href="dok.html">Dokumentasi</a></li>
+        <li>
+          <a href="https://wa.me/+6282255304228" target="_blank" class="btn-link">
+            <img src="assets/icon.png" alt="WA">Hubungi
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="isi">
+      <h1>KelDua Petshop</h1>
+      <p>Petshop Pilihan Orang Pintar.</p>
+      <form>
+        <input type="text" placeholder="Request">
+        <button type="submit" class="btn">Submit</button>
+      </form>
     </div>
+  </div>
+
+  <script src="menu.js"></script>
 </body>
 </html>
