--- a/panduan.html
+++ b/panduan.html
@@ -10,7 +10,10 @@
   <div class="atas">
     <nav>
       <a href="index.html"><img src="assets/logo.png" class="logo" alt="Logo"></a>
-      <ul>
+
+      <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+
+      <ul id="nav-links">
         <li><a href="produk.html">List Produk</a></li>
         <li><a href="panduan.html" class="active">Panduan</a></li>
         <li><a href="dok.html">Dokumentasi</a></li>
@@ -46,5 +49,7 @@
       </div>
     </div>
   </div>
+
+  <script src="menu.js"></script>
 </body>
 </html>
